# cohebot

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: pyright.yaml  ruff.yaml
.sisyphus/evidence/: task-5-verification.txt
configs/: cloud.toml  default.toml  smoke-100m.toml  test-cpu.toml
docs/: experiment-log.md
docs/omo/: crawler-architecture.md  huggingface-cli-migration-plan.md  huggingface-cli-research-findings.md
scripts/: crawl.sh  pipeline.sh  run.sh  setup_cloud.sh  train.sh  verify_training.py
src/: crawler.py  dataset.py  generate.py  preprocessor.py  train.py
src/cohebot/: __init__.py  crawler.py.bak  dataset.py  generate.py  model.py  preprocessor.py  preprocessor.py.bak  tokenizer.py  train.py
src/cohebot/attention/: __init__.py  flash.py  gqa.py  mha.py  rope.py
src/cohebot/crawler/: __init__.py  base.py  huggingface_crawler.py  huggingface_crawler_test.py
src/cohebot/crawler/preprocessor/: __init__.py  wikipedia_cleaner.py  wikipedia_preprocessor.py
tests/: smoke_test.py  test_huggingface_crawler.py
tests/ablation/: __init__.py  flash.py  mha.py  rope.py
