[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cohebot"
version = "0.1.0"
description = "CoheLLMBot: LLM from scratch with Korean Wikipedia data pipeline"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "mwparserfromhell>=0.6.5",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "huggingface-hub>=0.20.0",
    "tiktoken>=0.5.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
]

[project.scripts]
cohebot-crawl = "cohebot.crawler:main"
cohebot-preprocess = "cohebot.preprocessor:main"
cohebot-train = "cohebot.train:main"
cohebot-generate = "cohebot.generate:main"

[project.optional-dependencies]
logging = ["wandb>=0.16.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/cohebot"]
